// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Changes 1`] = `
<div>
  <h1>
    Hey!
  </h1>
  <button
    onClick={[Function]}
  >
    Change Text
  </button>
</div>
`;

exports[`Text Changes 2`] = `
<div>
  <h1>
    Yo!
  </h1>
  <button
    onClick={[Function]}
  >
    Change Text
  </button>
</div>
`;
